[package]
name = "ja-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.4"
rand = "0.8.5"
md5 = { version = "0.7.0", optional = true }
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
webpki-roots = "0.26.1"

[features]
default = ["ja3", "ja4"]
ja3 = ["md5"]
ja4 = ["sha2"]

[patch.crates-io]
rustls = { git = "https://github.com/XOR-op/rustls.delta.git", branch = "unofficial-rel-0.23" }